Fix text alignment

--- a/template/utils/text.styl
+++ b/template/utils/text.styl
@@ -15,7 +15,7 @@
       text-align: right
 
     &--left
-      text-align: right
+      text-align: left
 
     &--center
       text-align: center
